--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,13 @@
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
     "bcryptjs": "2.4.3",
+    "body-parser": "1.19.0",
+    "cors": "2.8.5",
+    "dotenv": "8.2.0",
     "express": "4.17.1",
+    "jsonwebtoken": "8.5.1",
+    "nodemailer": "6.4.10",
+    "nodemailer-express-handlebars": "4.0.0",
     "pg": "8.2.1",
     "pg-hstore": "2.3.3",
     "sequelize": "5.21.13",
