--- a/client/angular.json
+++ b/client/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "clinica": {
+    "university": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/clinica",
+            "outputPath": "dist/university",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -69,18 +69,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "clinica:build"
+            "browserTarget": "university:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "clinica:build:production"
+              "browserTarget": "university:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "clinica:build"
+            "browserTarget": "university:build"
           }
         },
         "test": {
@@ -117,15 +117,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "clinica:serve"
+            "devServerTarget": "university:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "clinica:serve:production"
+              "devServerTarget": "university:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "clinica"
+  "defaultProject": "university"
 }
