--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "~9.1.4",
     "@angular/platform-browser-dynamic": "~9.1.4",
     "@angular/router": "~9.1.4",
+    "angularfire2": "5.4.2",
     "bootstrap": "4.5.0",
     "express": "4.17.1",
     "firebase": "7.14.6",
